--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Sanya Odare</h1>
+    <h1>Sanya</h1>
+    <h2>Odare</h2>
   </div>
   
   <script src="app.js"></script>
